--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                 <div class="founder-content">
                     <h3>Meet the Founder</h3>
                     <h4>Naheed N. Hussain</h4>
-                    <p>The visionary behind ShikshaSathi, is a passionate edupreneur and educator with 25+ years of experience in the education sector. He holds four master's degrees — in Chemistry, Management, English Literature, and Law — and is currently pursuing a Ph.D. in Law. With over 100 training seminars conducted for teachers and students, he now dreams of reducing unemployment and improving teaching standards in India.</p>
+                    <p>Mr. Naheed N. Hussain Is a Passionate Trainer, Education-Social Entrepreneur, Educator with Over 25 plus Years of Experience in The Field of Education. He Holds Four Master's Degrees, Including One in Law, and Has Successfully Conducted More Than 100 Training Programmes and Seminars for Teachers and Students Across Various Platforms.</p>
+                    <p>Driven By His Commitment to Educational Empowerment and Social Impact, He Has Launched the Transformative Project "Shikshasathi"—A Visionary Initiative to Identify and Mentor Unemployed Graduates and Postgraduates Aspiring to Become Successful Teachers. Through This Platform, He Aims to Train Them as Effective, Result-Oriented Tutors and Facilitate Their Employment as Private Tutors as Well as In Premier Private Schools, Thereby Bridging the Gap Between Passion, Skill, And Opportunity in The Teaching Profession.</p>
                 </div>
                 <div class="founder-image">
                     <div class="founder-photo-container">
