ADDED files for task11 and also updated readme.md file

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -89,7 +89,7 @@
                 </div>
                 <div class="founder-image">
                     <div class="founder-photo-container">
-                        <img src="founder.jpg" alt="Naheed N. Hussain - Founder of ShikshaSathi" class="founder-photo" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <img src="assets/images/founder.jpg" alt="Naheed N. Hussain - Founder of ShikshaSathi" class="founder-photo" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
                         <div class="founder-placeholder">
                             <i class="fas fa-user-tie"></i>
                             <p>Naheed N. Hussain</p>
