--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h4>Email</h4>
-                            <p>info@shikshasarthi.com</p>
+                            <p>info@shikshasathi.com</p>
                         </div>
                     </div>
                 </div>
