ADDED Additional section in registration modal

--- a/index.html
+++ b/index.html
@@ -525,12 +525,12 @@
                             <label for="sst">SST</label>
                         </div>
                         <div class="checkbox-item">
-                            <input type="checkbox" id="evs" name="subjects" value="evs">
-                            <label for="evs">EVS</label>
-                        </div>
-                        <div class="checkbox-item">
                             <input type="checkbox" id="computer" name="subjects" value="computer">
                             <label for="computer">Computer</label>
+                        </div>
+                        <div class="checkbox-item">
+                            <input type="checkbox" id="Others" name="subjects" value="Others">
+                            <label for="Others">Others</label>
                         </div>
                     </div>
                 </div>
