ADDED Additional section in registration modal

--- a/index.html
+++ b/index.html
@@ -485,6 +485,7 @@
                         <option value="msc">M.Sc</option>
                         <option value="mcom">M.Com</option>
                         <option value="mtech">M.Tech/M.E</option>
+                        <option value="mtech">Others</option>
                     </select>
                 </div>
                 
