ADDED Additional section in registration modal

--- a/index.html
+++ b/index.html
@@ -288,10 +288,12 @@
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <div class="gallery-placeholder">
-                        <i class="fas fa-quote-left"></i>
-                        <p>Student Testimonials</p>
-                    </div>
+                    <a href="testimonials.html" style="text-decoration: none; color: inherit;">
+                        <div class="gallery-placeholder">
+                            <i class="fas fa-quote-left"></i>
+                            <p>Student Testimonials</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="gallery-item">
                     <div class="gallery-placeholder">
