--- a/index.html
+++ b/index.html
@@ -282,10 +282,12 @@
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <div class="gallery-placeholder">
-                        <i class="fas fa-hands-helping"></i>
-                        <p>Community Outreach</p>
-                    </div>
+                    <a href="photo-gallery.html" style="text-decoration: none; color: inherit;">
+                        <div class="gallery-placeholder">
+                            <i class="fas fa-images"></i>
+                            <p>Photo Gallery</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="gallery-item">
                     <a href="testimonials.html" style="text-decoration: none; color: inherit;">
