--- a/src/html/photo-gallery.html
+++ b/src/html/photo-gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Photo Gallery - ShikshaSathi</title>
-    <link rel="stylesheet" href="src/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -219,7 +219,7 @@
 </head>
 <body>
     <!-- Back Button -->
-    <button class="back-btn" onclick="window.location.href='index.html'">
+    <button class="back-btn" onclick="window.location.href='../index.html'">
         <i class="fas fa-arrow-left"></i> Back to Home
     </button>
 
@@ -369,7 +369,7 @@
 
 
 
-    <script src="src/js/script.js"></script>
+    <script src="../js/script.js"></script>
     <script>
         // Gallery filtering functionality
         function filterGallery(category) {
