--- a/src/html/testimonials.html
+++ b/src/html/testimonials.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student Testimonials - ShikshaSathi</title>
-    <link rel="stylesheet" href="src/css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -138,7 +138,7 @@
 </head>
 <body>
     <!-- Back Button -->
-    <a href="index.html" class="back-button">
+            <a href="../index.html" class="back-button">
         <i class="fas fa-arrow-left"></i>
         Back to Home
     </a>
@@ -386,6 +386,6 @@
         </a>
     </div>
 
-    <script src="src/js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html> 
