ADDED galary to the webiste

--- a/src/html/admin-dashboard.html
+++ b/src/html/admin-dashboard.html
@@ -149,7 +149,7 @@
 <body>
     <div class="admin-dashboard">
         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
-            <button class="back-btn" onclick="window.location.href='../../index.html'">
+            <button class="back-btn" onclick="window.location.href='/'">
                 <i class="fas fa-arrow-left"></i> Back to Website
             </button>
             <button class="export-btn" onclick="logout()" style="background: #dc2626;">
