--- a/src/html/admin-login.html
+++ b/src/html/admin-login.html
@@ -190,7 +190,7 @@
             </button>
         </form>
         
-        <a href="../../index.html" class="back-link">
+        <a href="/" class="back-link">
             <i class="fas fa-arrow-left"></i> Back to Website
         </a>
     </div>
