--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h4>Email</h4>
-                            <p>info@shikshasathi.com</p>
+                            <p>info@shikshasathi.org</p>
                         </div>
                     </div>
                 </div>
