ADDED galary to the webiste

--- a/gallery.html
+++ b/gallery.html
@@ -219,7 +219,7 @@
 </head>
 <body>
     <!-- Back Button -->
-    <button class="back-btn" onclick="window.location.href='../../index.html'">
+    <button class="back-btn" onclick="window.location.href='index.html'">
         <i class="fas fa-arrow-left"></i> Back to Home
     </button>
 
