ADDED galary to the webiste

--- a/404.html
+++ b/404.html
@@ -12,9 +12,10 @@
         // Handle specific redirects for old URLs
         const redirects = {
             '/index.html': '/',
-            '/admin-login.html': '/admin.html',
-            '/admin-dashboard.html': '/dashboard.html',
-            '/photo-gallery.html': '/gallery.html'
+            '/admin-login.html': '/admin',
+            '/admin-dashboard.html': '/dashboard',
+            '/photo-gallery.html': '/gallery',
+            '/testimonials.html': '/testimonials'
         };
         
         if (redirects[path]) {
