--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <a href="gallery.html" style="text-decoration: none; color: inherit;">
+                    <a href="gallery" style="text-decoration: none; color: inherit;">
                         <div class="gallery-placeholder">
                             <i class="fas fa-images"></i>
                             <p>Photo Gallery</p>
@@ -290,7 +290,7 @@
                     </a>
                 </div>
                 <div class="gallery-item">
-                    <a href="testimonials.html" style="text-decoration: none; color: inherit;">
+                    <a href="testimonials" style="text-decoration: none; color: inherit;">
                         <div class="gallery-placeholder">
                             <i class="fas fa-quote-left"></i>
                             <p>Student Testimonials</p>
