--- a/testimonials.html
+++ b/testimonials.html
@@ -138,7 +138,7 @@
 </head>
 <body>
     <!-- Back Button -->
-            <a href="index.html" class="back-button">
+            <a href="/" class="back-button">
         <i class="fas fa-arrow-left"></i>
         Back to Home
     </a>
