--- a/index.html
+++ b/index.html
@@ -290,10 +290,10 @@
                     </a>
                 </div>
                 <div class="gallery-item">
-                    <a href="testimonials" style="text-decoration: none; color: inherit;">
+                    <a href="testimonials.html" style="text-decoration: none; color: inherit;">
                         <div class="gallery-placeholder">
                             <i class="fas fa-quote-left"></i>
-                            <p>Student Testimonials</p>
+                            <p>Testimonials</p>
                         </div>
                     </a>
                 </div>
