added segregation in testimonials

--- a/testimonials.html
+++ b/testimonials.html
@@ -311,5 +311,11 @@
     </div>
 
     <script src="src/js/script.js"></script>
+    <script>
+        // Track testimonials page view
+        document.addEventListener('DOMContentLoaded', function() {
+            trackPageView('testimonials');
+        });
+    </script>
 </body>
 </html> 
