--- a/teachers-testimonials.html
+++ b/teachers-testimonials.html
@@ -460,5 +460,11 @@
     </div>
 
     <script src="src/js/script.js"></script>
+    <script>
+        // Track testimonials page view
+        document.addEventListener('DOMContentLoaded', function() {
+            trackPageView('testimonials');
+        });
+    </script>
 </body>
 </html> 
