--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <i class="fas fa-bullseye"></i>
                     </div>
                     <h3>Our Mission</h3>
-                    <p>We aim to identify unemployed graduates, train them to become competent private tutors, connect them with local students and schools, and uplift education at the grassroots through community-driven empowerment.</p>
+                    <p>We aim to identify unemployed graduates, train them to become competent successful educators, connect them with local students and schools, and uplift education at the grassroots through community-driven empowerment.</p>
                 </div>
             </div>
 
