added segregation in testimonials

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <div class="phase-card">
                     <div class="phase-number">4</div>
                     <h3>School Placement</h3>
-                    <p>High-Performing Tutors Recommended For Jobs In Reputed Schools (State/CBSE/ICSE/IB) and cColleges.</p>
+                    <p>High-Performing Tutors Recommended For Jobs In Reputed Schools (State/CBSE/ICSE/IB) and Colleges.</p>
                 </div>
             </div>
         </div>
