--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <section id="how-it-works" class="how-it-works">
         <div class="container">
             <div class="section-header">
-                <h2>SHIKSHASATHI</h2>
+                <h2>ShikShaSathi</h2>
                 <p>A digital based program shall provide following services to unemployed graduate/post gradu teachers</p>
             </div>
             
