--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2024 ShikshaSathi. All rights reserved.</p>
+                <p>&copy; 2025 ShikshaSathi - By Tohid All rights reserved.</p>
             </div>
         </div>
     </footer>
