ADDED galary to the webiste

--- a/testimonials.html
+++ b/testimonials.html
@@ -241,28 +241,28 @@
                 <div class="view-button">View Testimonials</div>
             </a>
 
-            <!-- Coming Soon Category -->
-            <div class="testimonial-category-card coming-soon-card">
+            <!-- Institutions Category -->
+            <a href="institutions-testimonials.html" class="testimonial-category-card">
                 <div class="category-icon">
-                    <i class="fas fa-clock"></i>
+                    <i class="fas fa-university"></i>
                 </div>
-                <h3 class="category-title">Coming Soon</h3>
+                <h3 class="category-title">Institutions</h3>
                 <p class="category-description">
-                    We're gathering more amazing stories from our community. 
-                    Stay tuned for testimonials from additional partners and stakeholders who are making a difference in education.
+                    Educational institutions share their experience partnering with ShikshaSathi. 
+                    Discover how we've helped schools, colleges, and educational networks find qualified teachers and improve their standards.
                 </p>
                 <div class="category-stats">
                     <div class="stat-item">
-                        <div class="stat-number">?</div>
-                        <div class="stat-label">Category</div>
+                        <div class="stat-number">30+</div>
+                        <div class="stat-label">Institutions</div>
                     </div>
                     <div class="stat-item">
-                        <div class="stat-number">Soon</div>
-                        <div class="stat-label">Available</div>
+                        <div class="stat-number">4.9★</div>
+                        <div class="stat-label">Rating</div>
                     </div>
                 </div>
-                <div class="view-button" style="background: #9ca3af; cursor: not-allowed;">Coming Soon</div>
-            </div>
+                <div class="view-button">View Testimonials</div>
+            </a>
         </div>
     </div>
 
@@ -318,4 +318,5 @@
         });
     </script>
 </body>
+</html> 
 </html> 
