--- a/admin.html
+++ b/admin.html
@@ -156,7 +156,7 @@
     <div class="login-container">
         <div class="login-header">
             <div class="login-icon">
-                <i class="fas fa-shield-alt"></i>
+                <img src="assets/images/logo.svg" alt="ShikshaSathi Logo" style="width: 60px; height: 60px; margin-bottom: 10px;">
             </div>
             <h1>Admin Login</h1>
             <p>Enter your credentials to access the dashboard</p>
