--- a/dashboard.html
+++ b/dashboard.html
@@ -432,7 +432,7 @@
         <!-- Sidebar -->
         <div class="sidebar">
             <div class="sidebar-header">
-                <img src="assets/images/logo.svg" alt="ShikshaSathi Logo" style="width: 40px; height: 40px; margin-right: 10px;">
+                <img src="assets/images/Education.png" alt="ShikshaSathi Logo" style="width: 40px; height: 40px; margin-right: 10px;">
                 <h2>ShikshaSathi</h2>
             </div>
             <ul class="nav-menu">
