--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="assets/images/logo.svg" alt="ShikshaSathi Logo" style="width: 35px; height: 35px; margin-right: 10px;">
+                <img src="assets/images/Education.png" alt="ShikshaSathi Logo" style="width: 35px; height: 35px; margin-right: 10px;">
                 <h2>ShikshaSathi</h2>
             </div>
             <ul class="nav-menu">
