--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="assets/images/Education.png" alt="ShikshaSathi Logo" style="width: 35px; height: 35px; margin-right: 10px;">
                 <h2>ShikshaSathi</h2>
             </div>
             <ul class="nav-menu">
@@ -85,14 +84,14 @@
                 <div class="founder-content">
                     <h3>Meet the Founder</h3>
                     <h4>Naheed N. Hussain</h4>
-                    <p>Mr. Naheed N. Hussain Is a Passionate Trainer, Education-Social Entrepreneur, Educator with Over 25 plus Years of Experience in The Field of Education. He Holds Four Master's Degrees, Including One in Law, and Has Successfully Conducted More Than 100 Training Programmes and Seminars for Teachers and Students Across Various Platforms.</p>
-                    <p>Driven By His Commitment to Educational Empowerment and Social Impact, He Has Launched the Transformative Project "Shikshasathi"—A Visionary Initiative to Identify and Mentor Unemployed Graduates and Postgraduates Aspiring to Become Successful Teachers. Through This Platform, He Aims to Train Them as Effective, Result-Oriented Tutors and Facilitate Their Employment as Private Tutors as Well as In Premier Private Schools, Thereby Bridging the Gap Between Passion, Skill, And Opportunity in The Teaching Profession.</p>
+                    <p>Mr. Naheed N. Hussain Is a Curious Learner,Passionate Trainer andEducator with Over 25 plus Years of Experience in The Field of Education. He Holds Four Masters' Degrees, Including One in Law, and Has Successfully Conducted More Than 100 Training Programmes and Seminars for Teachers and Students Across Various Platforms.</p>
+                    <p>Driven By His Commitment to Educational Empowerment and Social Impact, He Has Launched the Transformative Project "Shikshasathi"—A Visionary Initiative to Identify and Mentor Unemployed Graduates and Postgraduates Aspiring to Become Successful Teachers.</p>
                 </div>
                 <div class="founder-image">
-                    <div class="founder-photo-container">
-                        <img src="assets/images/founder.jpg" alt="Naheed N. Hussain - Founder of ShikshaSathi" class="founder-photo" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                        <div class="founder-placeholder">
-                            <i class="fas fa-user-tie"></i>
+                    <div class="founder-photo-container"
+                        <img src="assets/images/founder.jpg" alt="Naheed N. Hussain - Founder of ShikshaSathi class="founder-photo" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <div class="founder-placeholder"
+                            <i class="fas fa-user-tie"></i
                             <p>Naheed N. Hussain</p>
                             <small>Founder & CEO</small>
                         </div>
