--- a/admin.html
+++ b/admin.html
@@ -155,10 +155,8 @@
 <body>
     <div class="login-container">
         <div class="login-header">
-            <div class="login-icon">
-                <img src="assets/images/Education.png" alt="ShikshaSathi Logo" style="width: 60px; height: 60px; margin-bottom: 10px;">
-            </div>
-            <h1>Admin Login</h1>
+            <h1>ShikshaSathi</h1>
+            <h2>Admin Login</h2>
             <p>Enter your credentials to access the dashboard</p>
         </div>
         
