--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
+                <img src="assets/images/Education.png" alt="ShikshaSathi Logo" style="width: 35px; height: 35px; margin-right: 10px;">
                 <h2>ShikshaSathi</h2>
             </div>
             <ul class="nav-menu">
@@ -88,10 +89,10 @@
                     <p>Driven By His Commitment to Educational Empowerment and Social Impact, He Has Launched the Transformative Project "Shikshasathi"—A Visionary Initiative to Identify and Mentor Unemployed Graduates and Postgraduates Aspiring to Become Successful Teachers.</p>
                 </div>
                 <div class="founder-image">
-                    <div class="founder-photo-container"
-                        <img src="assets/images/founder.jpg" alt="Naheed N. Hussain - Founder of ShikshaSathi class="founder-photo" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
-                        <div class="founder-placeholder"
-                            <i class="fas fa-user-tie"></i
+                    <div class="founder-photo-container">
+                        <img src="assets/images/founder.jpg" alt="Naheed N. Hussain - Founder of ShikshaSathi" class="founder-photo" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">
+                        <div class="founder-placeholder">
+                            <i class="fas fa-user-tie"></i>
                             <p>Naheed N. Hussain</p>
                             <small>Founder & CEO</small>
                         </div>
