--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="assets/images/shikshasathi-logo.png" alt="ShikshaSathi Logo" style="width: 40px; height: 40px; margin-right: 10px;">
-                <h2>ShikshaSathi</h2>
+                <img src="assets/images/Education.png" alt="ShikshaSathi Logo" style="width: 50px; height: 50px;">
             </div>
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
