--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="assets/images/Education.png" alt="ShikshaSathi Logo" style="width: 400px; height: 90px;">
+                <img src="assets/images/Education.png?v=2" alt="ShikshaSathi Logo" style="width: 500px; height: 100px; position: absolute; left: 0;">
             </div>
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
