--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <i class="fas fa-bullseye"></i>
                     </div>
                     <h3>Our Mission</h3>
-                    <p>We Aim To Identify Unemployed Graduates, Train Them To Become Competent Successful Educators, Connect Them With Local Students And Schools, And Uplift Education At The Grassroots Through Community-Driven Empowerment.</p>
+                    <p>We are committed to discovering skilled yet unemployed graduates and postgraduates, providing them with quality training to become confident and effective educators.</p>
                 </div>
             </div>
 
