ADDED galary to the webiste

--- a/index.html
+++ b/index.html
@@ -957,6 +957,11 @@
         </a>
     </div>
 
+    <!-- Scroll to Top Button -->
+    <div class="scroll-to-top" id="scrollToTop">
+        <i class="fas fa-arrow-up"></i>
+    </div>
+
     <script src="src/js/script.js"></script>
 </body>
 </html> 
