ADDED galary to the webiste

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="#program">Program</a></li>
                     <li><a href="#how-it-works">How It Works</a></li>
                     <li><a href="#impact">Impact</a></li>
-                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="nav-toggle">
@@ -356,46 +356,7 @@
         </div>
     </section>
 
-    <!-- Gallery Section -->
-    <section id="gallery" class="gallery">
-        <div class="container">
-            <div class="section-header">
-                <h2>Gallery</h2>
-                <p>A Collection Of Our Training Programs, Community Outreach, Student Testimonials, And Placement Ceremonies.</p>
-            </div>
-            
-            <div class="gallery-grid">
-                <div class="gallery-item">
-                    <div class="gallery-placeholder">
-                        <i class="fas fa-chalkboard-teacher"></i>
-                        <p>Training Programs</p>
-                    </div>
-                </div>
-                <div class="gallery-item">
-                    <a href="gallery" style="text-decoration: none; color: inherit;">
-                        <div class="gallery-placeholder">
-                            <i class="fas fa-images"></i>
-                            <p>Photo Gallery</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="gallery-item">
-                    <a href="testimonials.html" style="text-decoration: none; color: inherit;">
-                        <div class="gallery-placeholder">
-                            <i class="fas fa-quote-left"></i>
-                            <p>Testimonials</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="gallery-item">
-                    <div class="gallery-placeholder">
-                        <i class="fas fa-award"></i>
-                        <p>Placement Ceremonies</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+
 
     <!-- Join Us Section -->
     <section class="join-us">
