ADDED file for new button

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="hero-buttons">
                     <button class="btn btn-primary" onclick="openRegistrationModal()">Register as a Tutor</button>
                     <button class="btn btn-secondary" onclick="openPartnerModal()">Join as a Partner School</button>
-                    <button class="btn btn-outline" onclick="openParentStudentModal()">Join as a Parent/Student</button>
+                    <button class="btn btn-tertiary" onclick="openParentStudentModal()">Join as a Parent/Student</button>
                     <button class="btn btn-outline" onclick="scrollToContact()">Contact Us</button>
                 </div>
             </div>
