ADDED file for new button

--- a/gallery.html
+++ b/gallery.html
@@ -134,8 +134,8 @@
     <!-- Hero Section -->
     <section class="gallery-hero">
         <div class="container">
-            <h1><i class="fas fa-images"></i> Our Gallery</h1>
-            <p>Explore moments from our educational journey, training sessions, and community impact</p>
+            <h1><i class="fas fa-th-large"></i> Our Services</h1>
+            <p>Explore our testimonials, gallery, training programs, and placement opportunities</p>
         </div>
     </section>
 
@@ -151,68 +151,54 @@
     <div class="gallery-container">
         <div class="gallery-grid">
             
-            <!-- Gallery Item 1 -->
+            <!-- Testimonials Card -->
             <div class="gallery-item">
                 <div class="gallery-placeholder">
-                    <p><i class="fas fa-chalkboard-teacher"></i><br>Teacher Training Session</p>
+                    <i class="fas fa-quote-left" style="font-size: 3rem; color: #2563eb; margin-bottom: 1rem;"></i>
+                    <h3 style="margin: 1rem 0; color: #1f2937;">Testimonials</h3>
+                    <p style="color: #6b7280; margin: 0;">Hear from our successful tutors, partner schools, and institutions</p>
+                    <div style="margin-top: 1.5rem;">
+                        <a href="testimonials.html" class="btn btn-primary" style="text-decoration: none; padding: 0.5rem 1rem; border-radius: 6px; background: #2563eb; color: white; font-size: 0.9rem;">View Testimonials</a>
+                    </div>
                 </div>
             </div>
 
-            <!-- Gallery Item 2 -->
+            <!-- Photo Gallery Card -->
             <div class="gallery-item">
                 <div class="gallery-placeholder">
-                    <p><i class="fas fa-graduation-cap"></i><br>Graduation Ceremony</p>
+                    <i class="fas fa-images" style="font-size: 3rem; color: #059669; margin-bottom: 1rem;"></i>
+                    <h3 style="margin: 1rem 0; color: #1f2937;">Photo Gallery</h3>
+                    <p style="color: #6b7280; margin: 0;">Explore moments from our training sessions and events</p>
+                    <div style="margin-top: 1.5rem;">
+                        <a href="#" class="btn btn-secondary" style="text-decoration: none; padding: 0.5rem 1rem; border-radius: 6px; background: #059669; color: white; font-size: 0.9rem;">View Photos</a>
+                    </div>
                 </div>
             </div>
 
-            <!-- Gallery Item 3 -->
+            <!-- Training Program Card -->
             <div class="gallery-item">
                 <div class="gallery-placeholder">
-                    <p><i class="fas fa-users"></i><br>Community Workshop</p>
+                    <i class="fas fa-graduation-cap" style="font-size: 3rem; color: #dc2626; margin-bottom: 1rem;"></i>
+                    <h3 style="margin: 1rem 0; color: #1f2937;">Training Program</h3>
+                    <p style="color: #6b7280; margin: 0;">Comprehensive training for aspiring educators</p>
+                    <div style="margin-top: 1.5rem;">
+                        <a href="index.html#program" class="btn btn-outline" style="text-decoration: none; padding: 0.5rem 1rem; border-radius: 6px; border: 2px solid #dc2626; color: #dc2626; font-size: 0.9rem;">Learn More</a>
+                    </div>
                 </div>
             </div>
 
-            <!-- Gallery Item 4 -->
+            <!-- Placements Card -->
             <div class="gallery-item">
                 <div class="gallery-placeholder">
-                    <p><i class="fas fa-laptop"></i><br>Online Learning Session</p>
+                    <i class="fas fa-briefcase" style="font-size: 3rem; color: #7c3aed; margin-bottom: 1rem;"></i>
+                    <h3 style="margin: 1rem 0; color: #1f2937;">Placements</h3>
+                    <p style="color: #6b7280; margin: 0;">Career opportunities and job placements for trained tutors</p>
+                    <div style="margin-top: 1.5rem;">
+                        <a href="#" class="btn btn-tertiary" style="text-decoration: none; padding: 0.5rem 1rem; border-radius: 6px; background: #7c3aed; color: white; font-size: 0.9rem;">View Opportunities</a>
+                    </div>
                 </div>
             </div>
 
-            <!-- Gallery Item 5 -->
-            <div class="gallery-item">
-                <div class="gallery-placeholder">
-                    <p><i class="fas fa-handshake"></i><br>Partnership Meeting</p>
-                </div>
-            </div>
-
-            <!-- Gallery Item 6 -->
-            <div class="gallery-item">
-                <div class="gallery-placeholder">
-                    <p><i class="fas fa-star"></i><br>Award Ceremony</p>
-                </div>
-            </div>
-
-            <!-- Gallery Item 7 -->
-            <div class="gallery-item">
-                <div class="gallery-placeholder">
-                    <p><i class="fas fa-book-open"></i><br>Study Group</p>
-                </div>
-            </div>
-
-            <!-- Gallery Item 8 -->
-            <div class="gallery-item">
-                <div class="gallery-placeholder">
-                    <p><i class="fas fa-lightbulb"></i><br>Innovation Workshop</p>
-                </div>
-            </div>
-
-            <!-- Gallery Item 9 -->
-            <div class="gallery-item">
-                <div class="gallery-placeholder">
-                    <p><i class="fas fa-heart"></i><br>Community Service</p>
-                </div>
-            </div>
         </div>
     </div>
 
