ADDED file for new button

--- a/gallery.html
+++ b/gallery.html
@@ -187,7 +187,7 @@
                         <p style="color: #6b7280; margin: 0; font-size: 0.95rem;">Explore moments from our training sessions and events</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-secondary" style="text-decoration: none; padding: 0.75rem 1.5rem; border-radius: 6px; background: #059669; color: white; font-size: 0.9rem; font-weight: 500;">View Photos</a>
+                        <a href="photo-gallery.html" class="btn btn-secondary" style="text-decoration: none; padding: 0.75rem 1.5rem; border-radius: 6px; background: #059669; color: white; font-size: 0.9rem; font-weight: 500;">View Photos</a>
                     </div>
                 </div>
             </div>
@@ -255,7 +255,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2024 ShikshaSathi. All rights reserved.</p>
+                <p>&copy; 2025 ShikshaSathi -By Tohid. All rights reserved.</p>
             </div>
         </div>
     </footer>
