ADDED file for new button

--- a/gallery.html
+++ b/gallery.html
@@ -140,7 +140,7 @@
 </head>
 <body>
     <!-- Back Button -->
-    <button class="back-button" onclick="window.location.href='index.html'">
+    <button class="back-button" onclick="window.location.href='index'">
         <i class="fas fa-arrow-left"></i>
     </button>
 
@@ -155,7 +155,7 @@
     <!-- Breadcrumb -->
     <div class="gallery-container">
         <div class="breadcrumb">
-            <a href="index.html">Home</a> > 
+            <a href="index">Home</a> > 
             Gallery
         </div>
     </div>
@@ -173,7 +173,7 @@
                         <p style="color: #6b7280; margin: 0; font-size: 0.95rem;">Hear from our successful tutors, partner schools, and institutions</p>
                     </div>
                     <div class="card-footer">
-                        <a href="testimonials.html" class="btn btn-primary" style="text-decoration: none; padding: 0.75rem 1.5rem; border-radius: 6px; background: #2563eb; color: white; font-size: 0.9rem; font-weight: 500;">View Testimonials</a>
+                        <a href="testimonials" class="btn btn-primary" style="text-decoration: none; padding: 0.75rem 1.5rem; border-radius: 6px; background: #2563eb; color: white; font-size: 0.9rem; font-weight: 500;">View Testimonials</a>
                     </div>
                 </div>
             </div>
@@ -187,7 +187,7 @@
                         <p style="color: #6b7280; margin: 0; font-size: 0.95rem;">Explore moments from our training sessions and events</p>
                     </div>
                     <div class="card-footer">
-                        <a href="photo-gallery.html" class="btn btn-secondary" style="text-decoration: none; padding: 0.75rem 1.5rem; border-radius: 6px; background: #059669; color: white; font-size: 0.9rem; font-weight: 500;">View Photos</a>
+                        <a href="photo-gallery" class="btn btn-secondary" style="text-decoration: none; padding: 0.75rem 1.5rem; border-radius: 6px; background: #059669; color: white; font-size: 0.9rem; font-weight: 500;">View Photos</a>
                     </div>
                 </div>
             </div>
@@ -235,10 +235,10 @@
                 <div class="footer-section">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html#about">About Us</a></li>
-                        <li><a href="index.html#program">Register</a></li>
-                        <li><a href="index.html#contact">Contact</a></li>
+                        <li><a href="index">Home</a></li>
+                        <li><a href="index#about">About Us</a></li>
+                        <li><a href="index#program">Register</a></li>
+                        <li><a href="index#contact">Contact</a></li>
                         <li><a href="#">Privacy Policy</a></li>
                     </ul>
                 </div>
