--- a/dashboard.html
+++ b/dashboard.html
@@ -547,7 +547,7 @@
         document.addEventListener('DOMContentLoaded', function() {
             const adminSession = localStorage.getItem('shikshaSathiAdminSession');
             if (adminSession !== 'true') {
-                window.location.href = 'admin.html';
+                window.location.href = 'admin';
             }
         });
 
@@ -574,7 +574,7 @@
         function logout() {
             localStorage.removeItem('shikshaSathiAdminSession');
             localStorage.removeItem('shikshaSathiAdminLoginTime');
-            window.location.href = 'admin.html';
+            window.location.href = 'admin';
         }
 
         // Photo upload functionality
