--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="#program">Program</a></li>
                     <li><a href="#how-it-works">How It Works</a></li>
                     <li><a href="#impact">Impact</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
+                                            <li><a href="gallery">Gallery</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
                 <div class="nav-toggle">
