--- a/institutions-testimonials.html
+++ b/institutions-testimonials.html
@@ -158,7 +158,7 @@
 </head>
 <body>
     <!-- Back Button -->
-    <button class="back-button" onclick="window.location.href='testimonials.html'">
+    <button class="back-button" onclick="window.location.href='testimonials'">
         <i class="fas fa-arrow-left"></i>
     </button>
 
@@ -174,7 +174,7 @@
     <div class="testimonials-container">
         <div class="breadcrumb">
             <a href="index.html">Home</a> > 
-            <a href="testimonials.html">Testimonials</a> > 
+                                    <a href="testimonials">Testimonials</a> > 
             Institutions
         </div>
     </div>
@@ -427,10 +427,10 @@
                 <div class="footer-section">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html#about">About Us</a></li>
-                        <li><a href="index.html#program">Register</a></li>
-                        <li><a href="index.html#contact">Contact</a></li>
+                        <li><a href="index">Home</a></li>
+                        <li><a href="index#about">About Us</a></li>
+                        <li><a href="index#program">Register</a></li>
+                        <li><a href="index#contact">Contact</a></li>
                         <li><a href="#">Privacy Policy</a></li>
                     </ul>
                 </div>
