--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -184,7 +184,7 @@
 </head>
 <body>
     <!-- Back Button -->
-    <button class="back-button" onclick="window.location.href='gallery.html'">
+    <button class="back-button" onclick="window.location.href='gallery'">
         <i class="fas fa-arrow-left"></i>
     </button>
 
@@ -199,8 +199,8 @@
     <!-- Breadcrumb -->
     <div class="photo-gallery-container">
         <div class="breadcrumb">
-            <a href="index.html">Home</a> > 
-            <a href="gallery.html">Gallery</a> > 
+            <a href="index">Home</a> > 
+            <a href="gallery">Gallery</a> > 
             Photo Gallery
         </div>
     </div>
@@ -373,10 +373,10 @@
                 <div class="footer-section">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="index.html#about">About Us</a></li>
-                        <li><a href="index.html#program">Register</a></li>
-                        <li><a href="index.html#contact">Contact</a></li>
+                        <li><a href="index">Home</a></li>
+                        <li><a href="index#about">About Us</a></li>
+                        <li><a href="index#program">Register</a></li>
+                        <li><a href="index#contact">Contact</a></li>
                         <li><a href="#">Privacy Policy</a></li>
                     </ul>
                 </div>
