--- a/admin.html
+++ b/admin.html
@@ -188,7 +188,7 @@
             </button>
         </form>
         
-        <a href="index" class="back-link">
+        <a href="/" class="back-link">
             <i class="fas fa-arrow-left"></i> Back to Website
         </a>
     </div>
