--- a/gallery.html
+++ b/gallery.html
@@ -140,7 +140,7 @@
 </head>
 <body>
     <!-- Back Button -->
-    <button class="back-button" onclick="window.location.href='index'">
+    <button class="back-button" onclick="window.location.href='/'">
         <i class="fas fa-arrow-left"></i>
     </button>
 
@@ -155,7 +155,7 @@
     <!-- Breadcrumb -->
     <div class="gallery-container">
         <div class="breadcrumb">
-            <a href="index">Home</a> > 
+            <a href="/">Home</a> > 
             Gallery
         </div>
     </div>
@@ -201,7 +201,7 @@
                         <p style="color: #6b7280; margin: 0; font-size: 0.95rem;">Comprehensive training for aspiring educators</p>
                     </div>
                     <div class="card-footer">
-                        <a href="index.html#program" class="btn btn-outline" style="text-decoration: none; padding: 0.75rem 1.5rem; border-radius: 6px; border: 2px solid #dc2626; color: #dc2626; font-size: 0.9rem; font-weight: 500;">Learn More</a>
+                        <a href="/#program" class="btn btn-outline" style="text-decoration: none; padding: 0.75rem 1.5rem; border-radius: 6px; border: 2px solid #dc2626; color: #dc2626; font-size: 0.9rem; font-weight: 500;">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -235,10 +235,10 @@
                 <div class="footer-section">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="index">Home</a></li>
-                        <li><a href="index#about">About Us</a></li>
-                        <li><a href="index#program">Register</a></li>
-                        <li><a href="index#contact">Contact</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/#about">About Us</a></li>
+                        <li><a href="/#program">Register</a></li>
+                        <li><a href="/#contact">Contact</a></li>
                         <li><a href="#">Privacy Policy</a></li>
                     </ul>
                 </div>
