--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -184,7 +184,7 @@
 </head>
 <body>
     <!-- Back Button -->
-    <button class="back-button" onclick="window.location.href='gallery'">
+    <button class="back-button" onclick="window.location.href='/'">
         <i class="fas fa-arrow-left"></i>
     </button>
 
@@ -199,7 +199,7 @@
     <!-- Breadcrumb -->
     <div class="photo-gallery-container">
         <div class="breadcrumb">
-            <a href="index">Home</a> > 
+            <a href="/">Home</a> > 
             <a href="gallery">Gallery</a> > 
             Photo Gallery
         </div>
@@ -373,10 +373,10 @@
                 <div class="footer-section">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="index">Home</a></li>
-                        <li><a href="index#about">About Us</a></li>
-                        <li><a href="index#program">Register</a></li>
-                        <li><a href="index#contact">Contact</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/#about">About Us</a></li>
+                        <li><a href="/#program">Register</a></li>
+                        <li><a href="/#contact">Contact</a></li>
                         <li><a href="#">Privacy Policy</a></li>
                     </ul>
                 </div>
