--- a/school-heads-testimonials.html
+++ b/school-heads-testimonials.html
@@ -173,7 +173,7 @@
     <!-- Breadcrumb -->
     <div class="testimonials-container">
         <div class="breadcrumb">
-            <a href="index.html">Home</a> > 
+            <a href="/">Home</a> > 
                                     <a href="testimonials">Testimonials</a> > 
             School Heads
         </div>
@@ -427,10 +427,10 @@
                 <div class="footer-section">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="index">Home</a></li>
-                        <li><a href="index#about">About Us</a></li>
-                        <li><a href="index#program">Register</a></li>
-                        <li><a href="index#contact">Contact</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/#about">About Us</a></li>
+                        <li><a href="/#program">Register</a></li>
+                        <li><a href="/#contact">Contact</a></li>
                         <li><a href="#">Privacy Policy</a></li>
                     </ul>
                 </div>
