--- a/testimonials.html
+++ b/testimonials.html
@@ -179,7 +179,7 @@
 </head>
 <body>
     <!-- Back Button -->
-    <button class="back-button" onclick="window.location.href='index'">
+    <button class="back-button" onclick="window.location.href='/'">
         <i class="fas fa-arrow-left"></i>
     </button>
 
@@ -278,10 +278,10 @@
                 <div class="footer-section">
                     <h4>Quick Links</h4>
                     <ul>
-                        <li><a href="index">Home</a></li>
-                        <li><a href="index#about">About Us</a></li>
-                        <li><a href="index#program">Register</a></li>
-                        <li><a href="index#contact">Contact</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/#about">About Us</a></li>
+                        <li><a href="/#program">Register</a></li>
+                        <li><a href="/#contact">Contact</a></li>
                         <li><a href="#">Privacy Policy</a></li>
                     </ul>
                 </div>
@@ -318,5 +318,4 @@
         });
     </script>
 </body>
-</html> 
 </html> 
