--- a/dashboard.html
+++ b/dashboard.html
@@ -582,13 +582,7 @@
     <script>
         // Check admin session on dashboard load
         const adminSession = localStorage.getItem('shikshaSathiAdminSession');
-        const loginTime = localStorage.getItem('shikshaSathiAdminLoginTime');
-        const now = Date.now();
-        const sessionValid = loginTime && (now - parseInt(loginTime) < 24 * 60 * 60 * 1000); // 24 hours
-        if (adminSession !== 'true' || !sessionValid) {
-            // Clear expired session if any
-            localStorage.removeItem('shikshaSathiAdminSession');
-            localStorage.removeItem('shikshaSathiAdminLoginTime');
+        if (adminSession !== 'true') {
             window.location.href = 'admin.html';
         }
 
