--- a/testimonials.html
+++ b/testimonials.html
@@ -195,7 +195,7 @@
     <section class="testimonials-hero">
         <div class="container">
             <h1>What People Say About Us</h1>
-            <p>Discover the impact ShikshaSathi has made on educators, school leaders, and the education community</p>
+            <p>Discover The Impact ShikshaSathi Has Made On Educators, School Leaders, And The Education Community</p>
         </div>
     </section>
 
