--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
                     <li><a href="#program">Program</a></li>
                     <li><a href="#how-it-works">How It Works</a></li>
                     <li><a href="#impact">Impact</a></li>
-                                            <li><a href="gallery">Gallery</a></li>
+                    <li><a href="gallery">Gallery</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="admin-dashboard.html" target="_blank">Admin</a></li>
                 </ul>
                 <div class="nav-toggle">
                     <span></span>
@@ -1070,6 +1071,7 @@
     </button>
 
     <!-- Scripts -->
+    <script src="src/js/excel-export.js"></script>
     <script src="src/js/script.js"></script>
 </body>
 </html> 
