Dockerize Strapi app and update README

--- a/index.html
+++ b/index.html
@@ -1072,6 +1072,7 @@
 
     <!-- Scripts -->
     <script src="src/js/excel-export.js"></script>
+    <script src="src/js/excel-handler.js"></script>
     <script src="src/js/script.js"></script>
 </body>
 </html> 
