Changing backend to collect data of forms in excel

--- a/404.html
+++ b/404.html
@@ -20,6 +20,8 @@
         // Handle specific redirects for old URLs
         const redirects = {
             '/index.html': '/',
+            '/admin': '/admin.html',
+            '/dashboard': '/dashboard.html',
             '/admin-login.html': '/admin',
             '/admin-dashboard.html': '/dashboard',
             '/photo-gallery.html': '/gallery',
