--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <li><a href="#impact">Impact</a></li>
                     <li><a href="gallery">Gallery</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="admin.html">Admin</a></li>
                 </ul>
                 <div class="nav-toggle">
                     <span></span>
