--- a/dashboard.html
+++ b/dashboard.html
@@ -577,7 +577,8 @@
                 <h4><i class="fas fa-lightbulb"></i> Data Management Tips</h4>
                 <ul>
                     <li><strong>Large Datasets:</strong> Use search and pagination for better performance</li>
-                    <li><strong>Data Export:</strong> Download CSV/Excel files for offline analysis</li>
+                    <li><strong>Excel Files:</strong> Automatically updated with each new registration - no need to download after every submission!</li>
+                    <li><strong>Data Export:</strong> Download updated Excel files when you need them for offline analysis</li>
                     <li><strong>Storage:</strong> Data is stored locally in your browser</li>
                     <li><strong>Backup:</strong> Export data regularly to prevent loss</li>
                 </ul>
@@ -679,7 +680,7 @@
                 <div class="action-buttons">
                     <input type="text" class="search-box" placeholder="Search tutors..." onkeyup="filterTable('tutors', this.value)">
                     <button class="btn btn-primary" onclick="downloadExcel('tutorRegistrations', 'Tutor_Registrations.xlsx')">
-                        <i class="fas fa-download"></i> Download Excel
+                        <i class="fas fa-download"></i> Download Updated Excel
                     </button>
                     <button class="btn btn-secondary" onclick="exportAsCSV('tutors')">
                         <i class="fas fa-file-csv"></i> Export CSV
@@ -693,7 +694,7 @@
                 <div class="action-buttons">
                     <input type="text" class="search-box" placeholder="Search schools..." onkeyup="filterTable('schools', this.value)">
                     <button class="btn btn-primary" onclick="downloadExcel('schoolRegistrations', 'Partner_Schools.xlsx')">
-                        <i class="fas fa-download"></i> Download Excel
+                        <i class="fas fa-download"></i> Download Updated Excel
                     </button>
                     <button class="btn btn-secondary" onclick="exportAsCSV('schools')">
                         <i class="fas fa-file-csv"></i> Export CSV
@@ -707,7 +708,7 @@
                 <div class="action-buttons">
                     <input type="text" class="search-box" placeholder="Search parents/students..." onkeyup="filterTable('parents', this.value)">
                     <button class="btn btn-primary" onclick="downloadExcel('parentStudentRegistrations', 'Parent_Student_Registrations.xlsx')">
-                        <i class="fas fa-download"></i> Download Excel
+                        <i class="fas fa-download"></i> Download Updated Excel
                     </button>
                     <button class="btn btn-secondary" onclick="exportAsCSV('parents')">
                         <i class="fas fa-file-csv"></i> Export CSV
@@ -720,7 +721,7 @@
         <!-- Global Actions -->
         <div class="action-buttons" style="margin-top: 30px; justify-content: center;">
             <button class="btn btn-primary" onclick="downloadAllData()">
-                <i class="fas fa-download"></i> Download All Data
+                <i class="fas fa-download"></i> Download All Updated Data
             </button>
             <button class="btn btn-secondary" onclick="exportAllAsCSV()">
                 <i class="fas fa-file-csv"></i> Export All as CSV
